database deleted scores locally stored